# OpenGL-4-Shading-Language-Cookbook-Third-Edition

./: .gitignore  CMakeLists.txt  build-cmake.bat  build-mingw.bat  build-sln.bat  mingw-cmake-build.bat  mingw-cmake-generate.bat  sln-build.bat  sln-generate.bat  sln-open.bat
ingredients/: CMakeLists.txt
